--- a/index.html
+++ b/index.html
@@ -1,48 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="cal.css" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Calculator</title>
-
-</head>
-<body>
+  </head>
+  <body>
     <div class="container">
-    <div>class="Calculator">
+      <div class="calculator">
         <input type="text" id="inputBox" placeholder="0" />
         <div>
-        <button data-value="AC"></button>
-        <button data-value="DEL"></button>
-        <button data-value="%"></button>
-        <button data-value="/"></button>
+          <button class="button operator">AC</button>
+          <button class="button operator">DEL</button>
+          <button class="button operator">%</button>
+          <button class="button operator">/</button>
         </div>
         <div>
-        <button data-value="7"></button>
-        <button data-value="8"></button>
-        <button data-value="9"></button>
-        <button data-value="*"></button>
+          <button class="button">7</button>
+          <button class="button">8</button>
+          <button class="button">9</button>
+          <button class="button operator">*</button>
         </div>
         <div>
-       <button data-value="4"></button>
-        <button data-value="5"></button>
-        <button data-value="6"></button>
-        <button data-value="-"></button>
+          <button class="button">4</button>
+          <button class="button">5</button>
+          <button class="button">6</button>
+          <button class="button operator">-</button>
         </div>
         <div>
-        <button data-value="1"></button>
-        <button data-value="2"></button>
-        <button data-value="3"></button>
-        <button data-value="+"></button>
+          <button class="button">1</button>
+          <button class="button">2</button>
+          <button class="button">3</button>
+          <button class="button operator">+</button>
         </div>
+
         <div>
-        <button data-value="0"></button>
-        <button data-value="."></button>
-        <button data-value="="></button>
+          <button class="button">00</button>
+          <button class="button">0</button>
+          <button class="button">.</button>
+          <button class="button equalBtn">=</button>
         </div>
-        </div>
-        </div>
-        <script src="cal.js"></script>
-        </body>
-        </html>
+      </div>
+    </div>
+
+    <script src="cal.js"></script>
+  </body>
+</html>
